--- a/src/app/user/categories/[id]/category.scss
+++ b/src/app/user/categories/[id]/category.scss
@@ -1,10 +1,11 @@
-@use '../../../styles/variables.scss';
+@use '../../../../styles/variables.scss';
 
-.category__container {
-	height: 100%;
+.category-view {
 	flex: 1;
+	height: 100%;
 	padding: 1% 2%;
-	background-color: variables.$foreground-color;	
+	background-color: variables.$foreground-color;
+	border-radius: variables.$radius;
 
 	h1 {
 		margin-bottom: 1%;
@@ -12,10 +13,28 @@
 		border-bottom: 2px solid variables.$primary-color-light--30op;
 		text-align: center;
 	}
-	
-	p {
-		padding: 1%;
+
+	.category__info {
+		width: 90%;
+
+		padding: 2%;
+		
+		background-color: variables.$foreground-color;
 		border-radius: variables.$radius;
-		flex: 1;
+		border: 2px solid variables.$primary-color-light--30op;
 	}
+
+	// p {
+	// 	padding: 1%;
+	// 	border-radius: variables.$radius;
+	// 	flex: 1;
+	// }
+}
+
+.category-edit {
+	flex: 1;
+	height: 100%;
+	padding: 1% 2%;
+	background-color: variables.$foreground-color;
+	border-radius: variables.$radius;
 }
