--- a/src/components/SideBar/sideBar.scss
+++ b/src/components/SideBar/sideBar.scss
@@ -7,11 +7,10 @@ nav {
 	width: 15vw;
 	height: 100vh;
 	max-height: 100vh;
-	overflow-y: scroll;
 	border-right: 2px solid variables.$primary-color-light--30op;
 	z-index: 10;
-
 	padding: 5px;
+	overflow-y: scroll;
 }
 
 .sidebar__header {
@@ -46,6 +45,8 @@ nav {
 
 	text-decoration: none;
 
+	overflow-y: auto;
+
 	.nav__list__title {
 		width: 100%;
 		font-size: small;
@@ -56,12 +57,13 @@ nav {
 }
 
 .nav__item {
-	border-radius: variables.$radius;
 	width: 100%;
 	height: 50px;
+	min-height: 40px;
 	margin-bottom: 5px;
 	padding: 0% 2%;
-
+	
+	border-radius: variables.$radius;
 	color: variables.$primary-font-color;
 	text-decoration: none;
 	list-style: none;
