--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,6 @@
 $page-background-color: #3E3B39;
-$foreground-color: #00000020;
+$foreground-color: rgba(0, 0, 0, 0.13);
+$foreground-color--darker: rgba(0, 0, 0, 0.26);
 $primary-font-color: #ffffff;
 $placeholder-font-color: rgba(255, 255, 255, 0.6);
 $disabled-background-color: rgb(101, 101, 101);
