--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -1,4 +1,5 @@
 @use '../../styles/variables.scss';
+@use 'sass:math';
 
 .card__container {
 	align-items: flex-start;
@@ -37,6 +38,7 @@
 }
 
 .card__title:hover {
+
 	h3,
 	h4,
 	.card__title__icon {
@@ -79,4 +81,46 @@
 		vertical-align: middle;
 		font-size: small;
 	}
+}
+
+.note-container {
+	text-decoration: none;
+
+	height: 250px;
+	min-height: 250px;
+	max-height: 250px;
+
+	width: 300px;
+	min-width: 300px;
+	max-width: 300px;
+
+	background-color: variables.$foreground-color;
+	border: 1px solid variables.$primary-color-light--30op;
+	border-radius: variables.$radius;
+
+	margin: 5px;
+
+	transition: 200ms;
+
+	.note__title {
+		width: 90%;
+		min-height: fit-content;
+		padding: 10px 0;
+		text-align: center;
+		color: variables.$placeholder-font-color;
+		border-bottom: 1px solid variables.$primary-color-light--30op;
+	}
+
+	.note__abstract {
+		width: 90%;
+		flex: 1;
+		padding: 10px 0;
+		text-wrap: wrap;
+	}
+}
+
+.note-container:hover {
+	box-shadow: variables.$box-shadow--light--small--offset;
+	background-color: variables.$foreground-color--darker;
+	transform: scale(105%);
 }
