--- a/src/components/Form/globalForm.scss
+++ b/src/components/Form/globalForm.scss
@@ -95,6 +95,7 @@ select {
 	background-color: variables.$foreground-color;
 	color: variables.$primary-font-color;
 	font-size: 14px;
+	font-weight: 400;
 }
 
 textarea {
@@ -116,6 +117,9 @@ textarea {
 	background-color: variables.$foreground-color;
 	color: variables.$primary-font-color;
 	font-size: 14px;
+	font-family: var(--raleway-font);
+	font-weight: 400;
+
 }
 
 input::placeholder,
