adjusting form fonts and fixing remaining merge conflict

--- a/src/components/Form/globalForm.scss
+++ b/src/components/Form/globalForm.scss
@@ -95,6 +95,7 @@ select {
 	background-color: variables.$foreground-color;
 	color: variables.$primary-font-color;
 	font-size: 14px;
+	font-family: var(--raleway-font);
 	font-weight: 400;
 }
 
