--- a/src/components/Form/globalForm.scss
+++ b/src/components/Form/globalForm.scss
@@ -148,6 +148,18 @@ select:disabled {
 	border: none;
 }
 
+.password__container {
+	width: 100%;
+	justify-content: flex-start;
+}
+
+.password__input {
+	flex: 1;
+	min-width: 90%;
+
+	margin-right: 1%;
+}
+
 .form__info {
 	width: 75%;
 	max-width: 75%;
