focus ok - falta estilo e configuração de tempo dos timers

--- a/src/app/(user)/focus/focus.scss
+++ b/src/app/(user)/focus/focus.scss
@@ -1,32 +1,62 @@
+@use '../../../styles/variables.scss';
 
 .focus__main {
-// style= {
-// 			{
-// 			width: '100vw', height: '100vh'
-// 		}
-// 	}
+	width: 100vw;
+	height: 100vh;
 }
 
 .focus__nav {
-// style= {
-// 			{
-// 			width: '90%', height: '50px', justifyContent: 'space-between', border: 'none', borderRadius: '10px', backgroundColor: '#00000020'
-// 		}
-// 	}
+	width: 90%;
+	height: 50px;
+	justify-content: space-between;
+	padding: 0 1%;
+	border: none;
+	border-radius: variables.$radius;
+	background-color: variables.$foreground-color;
+
+	h1 {
+		font-weight: bold;
+	}
 }
 
 .focus__nav__icon {
-// style= {
-// 			{
-// 			width: '20px', height: '20px', color: 'white', cursor: 'pointer'
-// 		}
-// 	}
+	width: 20px;
+	height: 20px;
+	color: variables.$primary-font-color;
+	cursor: pointer;
+	transition: 300ms;
+}
+
+.focus__nav__icon:hover {
+	transform: scale(110%);
+	color: variables.$primary-color-light;
+}
+
+.content__container {
+	width: 100vw;
+	height: 100%;
 }
 
 .focus__timer {
+	background-color: variables.$foreground-color;
+	width: 60vw;
+	height: 30vh;
+}
 
+.clock__container {
+	width: 100%;
+	padding: 10px;
+}
+
+.clock__text {
+	font-weight: bold;
+	font-size: 5rem;
+	width: 100%;
 }
 
 .focus__config {
-
+	background-color: variables.$foreground-color;
+	width: 30vw;
+	height: 60vh;
+	right: 10;
 }
