--- a/src/app/(user)/focus/focus.scss
+++ b/src/app/(user)/focus/focus.scss
@@ -1,12 +1,12 @@
 @use '../../../styles/variables.scss';
 
 .focus__main {
-	width: 100vw;
+	width: 90vw;
 	height: 100vh;
 }
 
 .focus__nav {
-	width: 90%;
+	width: 100%;
 	height: 50px;
 	justify-content: space-between;
 	padding: 0 1%;
@@ -33,30 +33,32 @@
 }
 
 .content__container {
-	width: 100vw;
-	height: 100%;
+	width: 100%;
+	flex: 1;
+	border-radius: variables.$radius;
 }
 
 .focus__timer {
 	background-color: variables.$foreground-color;
-	width: 60vw;
-	height: 30vh;
-}
-
-.clock__container {
-	width: 100%;
-	padding: 10px;
+	border-radius: variables.$radius;
+	width: 55vw;
+	height: 70vh;
 }
 
 .clock__text {
+	padding: 10px;
 	font-weight: bold;
-	font-size: 5rem;
+	font-size: 8rem;
 	width: 100%;
+	text-align: center;
+}
+
+.button__icon {
+	margin-right: 5px;
 }
 
 .focus__config {
 	background-color: variables.$foreground-color;
 	width: 30vw;
-	height: 60vh;
-	right: 10;
+	height: 70vh;
 }
