--- a/src/components/Form/globalForm.scss
+++ b/src/components/Form/globalForm.scss
@@ -168,7 +168,6 @@ select:disabled {
 	height: fit-content;
 
 	p {
-		font-size: small;
 		width: $input__width;
 		max-width: $input__width;
 
@@ -198,4 +197,13 @@ select:disabled {
 	max-height: 100%;
 	flex: 1;
 	max-width: 100%;
+}
+
+.form__container--fullW {
+	height: 100%;
+	max-height: 100%;
+	max-width: 100%;
+	min-width: 100%;
+	width: 100%;
+	flex: 1;
 }
