--- a/src/app/public/contents/[id]/content.scss
+++ b/src/app/public/contents/[id]/content.scss
@@ -2,20 +2,28 @@
 
 .content__container {
 	height: 100%;
-	flex: 1;
+	width: 90vw;
+	border-radius: variables.$radius;
 	padding: 1% 2%;
-	background-color: variables.$foreground-color;	
+	background-color: variables.$foreground-color;
+
+	.content__title {
+		width: 100%;
+		border-bottom: 2px solid variables.$primary-color-light--30op;
+		justify-content: space-between;
+		padding: 5px;
+		margin-bottom: 1%;
+	}
 
 	h1 {
-		margin-bottom: 1%;
-		width: 90%;
-		border-bottom: 2px solid variables.$primary-color-light--30op;
 		text-align: center;
+		flex: 1;
 	}
 	
 	p {
 		padding: 1%;
 		border-radius: variables.$radius;
 		flex: 1;
+		font-size: large;
 	}
 }
