--- a/src/app/public/publicPages.scss
+++ b/src/app/public/publicPages.scss
@@ -1,14 +1,13 @@
 @use '../../styles/variables.scss';
 
 .user-pages__main {
-	width: 100%;
 	height: 98vh;
 	border-radius: variables.$radius;
 	margin: auto 0.5%;
 }
 
-.gen-pages__main {
+.public-pages__main {
 	height: 90vh;
-	width: 90vw;
+	width: 100%;
 	justify-content: flex-start;
 }
