--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@ $foreground-color--darker: rgba(0, 0, 0, 0.26);
 $primary-font-color: #ffffff;
 $placeholder-font-color: rgba(255, 255, 255, 0.6);
 $disabled-background-color: rgb(101, 101, 101);
+$danger-color: rgb(255, 129, 129);
 
 $primary-color-light: #BE95C4;
 $primary-color-light--30op: #BE95C44d;
