fixing dates + events and tasks pages done

--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -83,9 +83,7 @@
 	}
 }
 
-.past-due {
-	// background-color: variables.$danger-color--50op;
-
+.past-date {
 	.tag__icon, .tag__content{
 		color: variables.$danger-color;
 	}
