--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -100,10 +100,11 @@ body {
 	background-color: variables.$foreground-color;
 	border-radius: variables.$radius;
 	opacity: 0.5;
+	font-size: small;
 
 	position: absolute;
 	bottom: 2%;
-	right: 2%;
+	right: 1%;
 	z-index: 100;
 	padding: 10px;
 	transition: 300ms;
