--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -84,12 +84,15 @@
 }
 
 .past-date {
-	.tag__icon, .tag__content{
+
+	.tag__icon,
+	.tag__content {
 		color: variables.$danger-color;
 	}
 }
 
 .note-container {
+	align-items: flex-start;
 	text-decoration: none;
 
 	height: 250px;
@@ -109,6 +112,7 @@
 	transition: 200ms;
 
 	.note__title {
+		align-self: center;
 		width: 90%;
 		min-height: fit-content;
 		padding: 10px 0;
@@ -118,6 +122,7 @@
 	}
 
 	.note__abstract {
+		align-self: center;
 		width: 90%;
 		flex: 1;
 		padding: 10px 0;
