review aboutpage - resolves #105

--- a/src/app/public/about/about.scss
+++ b/src/app/public/about/about.scss
@@ -1,7 +1,10 @@
 @use '../../../styles/variables.scss';
 
 .about__container {
-	height: 80vh;
+	// height: 80vh;
+	height: 100%;
+	width: 100%;
+	max-width: 90vw;
 	justify-content: flex-start;
 }
 .about__section {
