--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -22,11 +22,16 @@
 
 		width: 100%;
 		font-size: 1rem;
-		margin-bottom: 1%;
+		margin: 1% 5px;
 		cursor: pointer;
 
+		h4 {
+			width: 100%;
+		}
+
 		.card__title__icon {
-			margin-right: 10px;
+			height: 15px;
+			width: 15px;
 		}
 	}
 
