--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -1,52 +1,31 @@
 @use '../styles/variables.scss';
-
-.home__container {
-	width: 100vw;
-	height: 100vh;
-	max-width: 100vw;
-	max-height: 100vh;
-}
-
-.home_menu {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: flex-end;
-
-	width: 100vw;
-	height: 8%;
-	padding: 1% 0%;
-
-	border-bottom: 0.8px solid variables.$primary-color-light--30op;
-
-	.button {
-		margin: 0% 1%;
-	}
-}
-
 .home__main {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+	height: 100%;
+	width: 90vw;
+}
 
-	// height: 85vh;
-	flex: 1;
-	width: 100vw;
+.home__content {
+	align-items: flex-start;
 
-	.home__main__title {
+	.home__content__title {
 		font-size: 3.0rem;
-		margin-bottom: 1%;
-		width: 80%;
-		text-align: center;
+		margin-bottom: 2%;
 	}
-	
-	.home__main__subtitle {
-		margin-bottom: 1%;
+
+	.home__content__subtitle {
+		margin-bottom: 2%;
 		width: 80%;
-		text-align: center;
 		color: variables.$primary-color-light;
 		font-size: larger;
 		font-weight: 600;
+	}
+
+	.icon {
+		width: 30px;
+		height: 30px;
+	}
+
+	.button {
+		margin: 0;
 	}
 }
