--- a/src/app/public/contents/[id]/content.scss
+++ b/src/app/public/contents/[id]/content.scss
@@ -1,4 +1,5 @@
 @use '../../../../styles/variables.scss';
+
 .content__title {
 	width: 100%;
 	border-bottom: 2px solid variables.$primary-color-light--30op;
@@ -12,15 +13,24 @@
 	}
 }
 
-.content__inner-content {	
-	h2,h3,h4 {
+.content__inner-content {
+	width: 100%;
+
+	h2,
+	h3,
+	h4 {
 		width: 100%;
 		text-align: left;
 		margin-top: 10px;
 	}
-	
-	p, ul, ol  {
-		font-weight: 400;
+
+	p,
+	i,
+	a,
+	ul,
+	ol,
+	li {
+		font-weight: 500;
 		font-size: 1.1rem;
 		margin-bottom: 10px;
 		width: 100%;
@@ -30,7 +40,16 @@
 		list-style: inside decimal;
 	}
 
+	ul {
+		list-style: inside;
+	}
+
 	.image {
 		margin-bottom: 10px;
+	}
+
+	.content__section {
+		width: 100%;
+		align-items: flex-start;
 	}
 }
