--- a/src/app/public/contents/contentsPage.scss
+++ b/src/app/public/contents/contentsPage.scss
@@ -35,6 +35,8 @@
 	border-bottom: 1px solid variables.$primary-color-light--30op;
 	transition: 300ms;
 
+	h2 { font-size: 1.2rem;}
+
 	h2,
 	p {
 		color: rgb(204, 204, 204);
