--- a/src/app/public/contents/contentsPage.scss
+++ b/src/app/public/contents/contentsPage.scss
@@ -8,10 +8,23 @@
 	justify-content: flex-start;
 }
 
-.contents__page-title {
+// .contents__page-title {
+// 	width: 100%;
+// 	text-align: center;
+// 	margin-bottom: 1%;
+// }
+
+.content__title {
 	width: 100%;
-	text-align: center;
+	border-bottom: 2px solid variables.$primary-color-light--30op;
+	justify-content: space-between;
+	padding: 5px;
 	margin-bottom: 1%;
+
+	h1 {
+		text-align: center;
+		flex: 1;
+	}
 }
 
 .contents__feed {
