--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -1,9 +1,6 @@
 @use '../../styles/variables.scss';
 
 .menu {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
 	justify-content: space-between;
 
 	width: 90vw;
@@ -25,9 +22,25 @@
 }
 
 .menu__title:hover {
-	h2 { color: variables.$primary-color-light; }
+	h2 {
+		color: variables.$primary-color-light;
+	}
 }
 
 .menu__buttons {
 	width: fit-content;
+}
+
+.public-page__title {
+	width: 100%;
+	height: 50px;
+	border-bottom: 2px solid variables.$primary-color-light--30op;
+	justify-content: space-between;
+	padding: 5px;
+	margin-bottom: 1%;
+
+	h1 {
+		text-align: center;
+		flex: 1;
+	}
 }
